array.island.Island.scala.error
Compilation error:
Island:8: error: type mismatch;
 found   : List[Any]
 required: scala.collection.immutable.Nil.type
    listeNulle = listeNulle :: List(0)
                            ^Island:18: error: not found: value in
        for (j in range <- i to k-1) {
               ^Island:18: error: not found: value in
        for (j in range <- i to k-1) {
               ^